<resources>
    <string name="app_name">DrawIt!</string>
    <string name="add_page">Add Page</string>
    <string name="duplicate_page">Duplicate Page</string>
    <string name="delete_page">Delete Page</string>
    <string name="page_list">Page list</string>
    <string name="delete_all">Delete all</string>
    <string name="pencil">Pencil</string>
    <string name="eraser">Eraser</string>
    <string name="play">Play video</string>
    <string name="select_color">Select color</string>
    <string name="random">Random</string>
    <string name="generate_n_pages">Generate N Pages</string>
    <string name="click_item_to_navigate">Click on item to navigate back to that frame</string>
    <string name="_0_5x">0.5x</string>
    <string name="_1x">1x</string>
    <string name="_2x">2x</string>
</resources>
