<!-- res/layout/color_palette_popup.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/speedSlow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:text="@string/_0_5x"
            android:textColor="@color/colorOnBackground"
            android:layout_marginHorizontal="5dp"
            android:layout_gravity="center_horizontal" />

        <ImageView
            android:id="@+id/tick_mark_slow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_tick"
            android:visibility="gone" />

    </LinearLayout>

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">
       <TextView
           android:id="@+id/speedNormal"
           android:layout_width="30dp"
           android:layout_height="30dp"
           android:textColor="@color/colorOnBackground"
           android:layout_marginHorizontal="5dp"
           android:gravity="center_horizontal"
           android:text="@string/_1x" />
       <ImageView
           android:id="@+id/tick_mark_normal"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/ic_tick"
           android:visibility="gone" />

   </LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/speedFast"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:textColor="@color/colorOnBackground"
        android:layout_marginHorizontal="5dp"
        android:gravity="center_horizontal"
        android:text="@string/_2x" />

    <ImageView
        android:id="@+id/tick_mark_fast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_tick"
        android:visibility="gone" />
</LinearLayout>

</LinearLayout>
